--- a/src/CsvViewer/CsvViewer/CsvViewer.Core/CsvViewer.Core.csproj
+++ b/src/CsvViewer/CsvViewer/CsvViewer.Core/CsvViewer.Core.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
   <PropertyGroup>
-    <TargetFramework>net472</TargetFramework>
+    <TargetFrameworks>net472;net5.0-windows</TargetFrameworks>
     <UseWPF>true</UseWPF>
     <AssemblyName>CsvViewer.Core</AssemblyName>
   </PropertyGroup>
