--- a/src/CsvViewer/CsvViewer/CsvViewer/CsvViewer.csproj
+++ b/src/CsvViewer/CsvViewer/CsvViewer/CsvViewer.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net472</TargetFramework>
+    <TargetFrameworks>net472;net5.0-windows</TargetFrameworks>
     <UseWPF>true</UseWPF>
     <AssemblyName>CsvViewer</AssemblyName>
   </PropertyGroup>
