Implemented ModernUiWPF alternative version
Without the need for WinRT SDK contracts

--- a/src/CsvViewer/CsvViewer/Modules/CsvViewer.Modules.ModuleName/CsvViewer.Modules.ModuleName.csproj
+++ b/src/CsvViewer/CsvViewer/Modules/CsvViewer.Modules.ModuleName/CsvViewer.Modules.ModuleName.csproj
@@ -5,6 +5,7 @@
     <AssemblyName>CsvViewer.Modules.ModuleName</AssemblyName>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="ModernWpfUis" Version="1.2.0" />
     <PackageReference Include="Prism.Wpf" Version="8.1.97" />
   </ItemGroup>
   <ItemGroup>
