--- a/src/CsvViewer/CsvViewer/CsvViewer/CsvViewer.csproj
+++ b/src/CsvViewer/CsvViewer/CsvViewer/CsvViewer.csproj
@@ -6,6 +6,7 @@
     <AssemblyName>CsvViewer</AssemblyName>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="ModernWpfUis" Version="1.2.0" />
     <PackageReference Include="Prism.Unity" Version="8.1.97" />
   </ItemGroup>
   <ItemGroup>
