--- a/src/CsvViewer/CsvViewer/Modules/CsvViewer.Modules.CsvOpener/CsvViewer.Modules.CsvOpener.csproj
+++ b/src/CsvViewer/CsvViewer/Modules/CsvViewer.Modules.CsvOpener/CsvViewer.Modules.CsvOpener.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <TargetFrameworks>net472;net5.0-windows</TargetFrameworks>
     <UseWPF>true</UseWPF>
-    <AssemblyName>CsvViewer.Modules.ModuleName</AssemblyName>
+    <AssemblyName>CsvViewer.Modules.CsvOpener</AssemblyName>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="ModernWpfUis" Version="1.2.0" />
